# Minimal-Problem-Solver-on-CPU

./: .gitmodules  EliminationTemplate.md  README.md
CPU-HC/: CMakeLists.txt
CPU-HC/EverythingOld/: cpu-compute.hpp  cpu-eval-HxH-2view_triang.h  cpu-eval-HxH-4view_triang.h  cpu-eval-HxH-5pt_rel_pos_alg_form_quat.h  cpu-eval-HxH-5pt_rel_pos_eight_unkwns.h  cpu-eval-HxH-5pt_rel_pos_full_form_quat.h  cpu-eval-HxH-5pt_rel_pos_geo_form_quat.h  cpu-eval-HxH-5view_triang.h  cpu-eval-HxHt-2view_triang.h  cpu-eval-HxHt-4view_triang.h  cpu-eval-HxHt-5pt_rel_pos_alg_form_quat.h  cpu-eval-HxHt-5pt_rel_pos_eight_unkwns.h  cpu-eval-HxHt-5pt_rel_pos_full_form_quat.h  cpu-eval-HxHt-5pt_rel_pos_geo_form_quat.h  cpu-eval-HxHt-5view_triang.h  cpu-hc-solver-2view_triang.cpp  cpu-hc-solver-4view_triang.cpp  cpu-hc-solver-5pt_rel_pos_alg_form_quat.cpp  cpu-hc-solver-5pt_rel_pos_eight_unkwns.cpp  cpu-hc-solver-5pt_rel_pos_full_form_quat.cpp  cpu-hc-solver-5pt_rel_pos_geo_form_quat.cpp  cpu-hc-solver-5view_triang.cpp
CPU-HC/Output_Write_Files/: CPU_Converged_HC_tracks.txt
CPU-HC/cmd/: CMakeLists.txt  cpu_hc_main.cpp
CPU-HC/magmaHC/: CMakeLists.txt  CPU_HC.cpp  CPU_HC.hpp  Data_Reader.cpp  Data_Reader.hpp  Evaluations.cpp  Evaluations.hpp  HomotopyContinuation.cpp  definitions.hpp
Julia-HC-Solver/: 4view_triangulation.jl  4view_triangulation_start_sols.txt  trifocal_2op1p_30x30.jl
autogen_v0_5/autogen/: generate_big_table.m  test_cpp.m
autogen_v0_5/cache/: basis.r6p_red.txt  matrix.r6p.1.txt  matrix.r6p_red.1.txt
autogen_v0_5/solvers/: solver_r6p.m  solver_r6p_red.m
(+21 files in other folders)
